mettre a jour la liste affichée quand on supprime par index